test/files/neg/t2641.check
t2641.scala:18: error: wrong number of type arguments for ManagedSeq, should be 2
        with TraversableViewLike[A, ManagedSeqStrict[A], ManagedSeq[A]]
                                                         ^
t2641.scala:16: error: illegal inheritance;
 self-type ManagedSeq does not conform to ManagedSeqStrict[A]'s selftype ManagedSeqStrict[A]
        extends ManagedSeqStrict[A]
                ^
t2641.scala:17: error: illegal inheritance;
 self-type ManagedSeq does not conform to scala.collection.TraversableView[A,ManagedSeqStrict[A]]'s selftype scala.collection.TraversableView[A,ManagedSeqStrict[A]]
        with TraversableView[A, ManagedSeqStrict[A]]
             ^
t2641.scala:27: error: value managedIterator is not a member of ManagedSeq
    override def managedIterator = self.managedIterator slice (from, until)
                                        ^
four errors found
